--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
     margin-right: 10px;
 }
 .btn-radius{
+    background-color: #fff;;
     border-radius: 25px;
     color: gray;
     /* height: 15px; */
@@ -89,7 +90,7 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
-    padding: 30px 60px;
+    padding: 30px 60px 50px;
 
 }
 .service-description{
@@ -135,13 +136,38 @@
     margin-bottom: 10px;
 }
 .item{
-    height: 300px;
+    height: 250px;
     width: 300px;
     background-color: white;
     text-align: center;
     border-radius: 10px;
+    padding: 80px 0px 0px;
 }
-.item img{
-    width: 30%;
-    margin: 70px 0px 20px; 
+.icon-img{
+    width: 70px;
+    /* margin: 70px 0px 20px;  */
+}
+/* appointment section */
+#appointment-section{
+    width: 70%;
+    /* height: 200px; */
+    margin: auto;
+    margin-top: -40px;
+    background-color: tomato;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    border-radius: 20px;
+    padding: 50px 30px;
+    color: #fff;
+}
+.appointment-call{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    padding-right: 5px;
+    border-right: 2px solid gray;
+}
+.appointment-details{
+    width: 50%;
 }
