--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@
 }
 /* nav bar classes */
 .menu-bar{
+    width: 100%;
     background-color: gray;
     display: flex;
     justify-content: space-around;
@@ -40,7 +41,7 @@
     padding: 20px;
     font-size: 18px;
     font-weight: bold;
-    position: sticky;
+    position: fixed;
 
 }
 .menus{
@@ -178,14 +179,15 @@
     text-align: center;
 }
 .cards{
+    margin: 50px 0px;
     display: flex;
-    justify-content: center;
-    gap: 60px;
+    justify-content:space-between;
     text-align: left;
 }
 .card{
-    width: 25%;
-    border-radius: 15px;
+    width: 350px;
+    height: 450px;
+    border-radius: 10px;
     box-shadow: 5px 7px 10px gray;
 }
 .card-img{
@@ -194,4 +196,47 @@
 }
 .scale{
     margin: 10px;
+}
+#footer-secion{
+    margin-top: 50px;
+    height: 60vh;
+    background-image: url("asset/image/footer-bg.png"),
+        linear-gradient(rgba(33, 33, 33, 0.9),rgba(0, 0, 0, 0.9));
+        background-blend-mode: overlay;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    color: #fff;
+
+}
+.footer-area{
+    width: 70%;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+    padding-top: 150px;
+    padding-bottom: 100px;
+}
+.footer-paragrap{
+    width: 250px;
+}
+.primary-margin{
+    margin: 10px 0px;
+}
+.copyright{
+    width: 70%;
+    margin: auto;
+    text-align: center;
+}
+.copyright-letter{
+    margin-top: 20px;
+}
+.media i{
+    height: 60px;
+    width: 60px;
+    background-color: #fff;
+    color: black;
+    border-radius: 30px;
+
 }
